--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -7,7 +7,7 @@
   padding: 0px;
   margin: 20px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-  border-radius: 10%;
+  border-radius: 3%;
   min-height: 325px;
   max-width: 320px;
   color: whitesmoke;
@@ -23,6 +23,7 @@
 }
 
 .home-banner h1 {
+  padding-top: 35px;
   font-size: 1.2em;
 }
 
@@ -30,7 +31,7 @@
   padding-top: 5px;
   padding-left: 15px;
   font-size: 0.8em;
-  padding-bottom: 0px;
+  padding-bottom: 20px;
 }
 
 .home-banner img {
