--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -43,7 +43,7 @@
 }
 
 .home-banner img {
-  padding-top: 62px;
+  padding-top: 32px;
   height: auto;
   width: 244px;
 }
@@ -56,12 +56,13 @@
   align-content: center;
   justify-content: center;
   padding-top: 28px;
-  margin: 20px;
+  margin: 10px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 3%;
   min-height: 123px;
   color: #585858;
   width: 85%;
+  margin-bottom: 100px;
 }
 
 .link-card-container p {
@@ -145,7 +146,7 @@
       border-radius: 10px;
     }
     .home-banner h1 {
-      font-size: 2em;
+      font-size: 1.8em;
       padding-left: 13px;
     }
     .home-banner p {
