--- a/src/components/ProductCard/styles.css
+++ b/src/components/ProductCard/styles.css
@@ -1,5 +1,4 @@
 .catalog-card-container {
-  margin: 0px 0px 20px 0px;
   padding: 0px 0px 25px 0px;
   width: 258px;
 }
@@ -12,7 +11,6 @@
   align-items: center;
 }
 
-
 .catalog-card-container p {
   padding-right: 5px;
   font-style: italic;
@@ -21,4 +19,10 @@
   line-height: 16px;
   align-items: center;
   color: rgba(88, 88, 88, 1);
+}
+
+@media (min-width: 1280px) {
+  .catalog-card-container {
+    height: auto;
+  }
 }
